# last-django-practice

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mysite19/: manage.py
mysite19/blogapp/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
mysite19/blogapp/migrations/: 0001_initial.py  0002_alter_article_author.py
mysite19/blogapp/templates/blogapp/: article_list.html  article_view.html  author_view.html  base.html  create_article.html  create_author.html
mysite19/locale/en/LC_MESSAGES/: django.po
mysite19/locale/ru/LC_MESSAGES/: django.po
mysite19/myapi/: apps.py  serializers.py  urls.py  views.py
mysite19/myauth/: apps.py  forms.py  models.py  serialisers.py  urls.py  views.py
mysite19/myauth/migrations/: 0001_initial.py
mysite19/myauth/templates/myauth/: about-me.html  base.html  login.html  profile_detail.html  profiles-list.html  register.html  staff-avatar-update.html
mysite19/mysite19/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
mysite19/shop/: admin.py  apps.py  common.py  forms.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite19/shop/management/commands/: aggr.py  bulk_actions.py  create_order.py  create_products.py  selecting_fields.py  update_order.py
mysite19/shop/migrations/: 0001_initial.py  0002_remove_productimage_description.py  0003_alter_order_delivery_address_and_more.py
mysite19/shop/templates/admin/: csv_form.html
mysite19/shop/templates/shop/: base.html  groups-list.html  order_detail.html  (+13 more)
mysite19/static/: site.webmanifest
(+5 files in other folders)
